[tool.poetry]
name = "ttt-mae"
version = "0.1.0"
description = ""
authors = ["killian31 <80256683+killian31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2.2"
torchvision = "0.17.2"
numpy = "1.26.4"
tqdm = "^4.67.0"
tensorboard = "^2.18.0"
timm = "^1.0.11"
scipy = "^1.14.1"
torchinfo = "^1.8.0"


[tool.poetry.group.dev.dependencies]
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
